<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intro_text"
        android:textAppearance="@android:style/TextAppearance.Large"/>

    <!-- Use android:hint to make EditText fields accessible to uiautomator
     instead of android:contentDescription -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/coeffA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:hint="@string/label_coeff_a">

        <EditText
            android:id="@+id/editCoeffA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Coefficient a"
            android:ems="10"
            android:inputType="numberSigned" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/coeffB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/coeffA"
        android:hint="@string/label_coeff_b">

        <EditText
            android:id="@+id/editCoeffB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Coefficient b"
            android:ems="10"
            android:inputType="numberSigned" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/coeffC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/coeffB"
        android:hint="@string/label_coeff_c">

        <EditText
            android:id="@+id/editCoeffC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Coefficient c"
            android:ems="10"
            android:inputType="numberSigned" />

    </android.support.design.widget.TextInputLayout>

    <!-- Use contentDescription to make ImageButton, ImageView, CheckBox and other user interface controls
    accessible to uiautomator -->
    <Button
        android:id="@+id/btn_calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="Calculate solution button"
        android:onClick="onClickCalculate"
        android:layout_below="@id/coeffC"
        android:text="@string/label_calculate" />

    <TextView
        android:id="@+id/textDiscriminant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="Discriminant result"
        android:paddingTop="10dp"
        android:layout_below="@id/btn_calculate"
        android:text="@string/label_diakrinousa"
        android:textAppearance="@android:style/TextAppearance.Medium"/>

    <TextView
        android:id="@+id/textStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:layout_below="@id/textDiscriminant"
        android:text="@string/label_status"
        android:textAppearance="@android:style/TextAppearance.Medium"/>

    <TextView
        android:id="@+id/textRoot1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="Solution 1"
        android:paddingTop="10dp"
        android:layout_below="@id/textStatus"
        android:text="@string/label_root1"
        android:textAppearance="@android:style/TextAppearance.Medium"/>

    <TextView
        android:id="@+id/textRoot2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="Solution 2"
        android:paddingTop="10dp"
        android:layout_below="@id/textRoot1"
        android:text="@string/label_root2"
        android:textAppearance="@android:style/TextAppearance.Medium"/>


</RelativeLayout>
